--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -96,6 +96,18 @@
             </div>
         </div>
 
+        <div class="wrapper" id="mail">
+            <div id="wrap">
+                <div id='form_wrap'>
+                    <form>
+                        <p>Dear 姐姐,</p>
+                        <p id="demo" data-text="最美的花送给最漂亮的姐姐。"></p>
+                        <p style="text-align: right;">情商有点低的哥哥</p>
+                    </form>
+                </div>
+            </div>
+        </div>
+
         <!--
         <div style="width: 300px;height:200px;left:100px;top: 300px;position:absolute;">
             <div class='rabbit'></div>
