--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -125,6 +125,7 @@
         </div>
         -->
         <script src="js/vendor/jquery-1.11.0.min.js"></script>
+        <script src="js/vendor/jquery.mobile-1.4.1.min.js"></script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/jquery.typewriter.js"></script>
         <script src="js/main.js"></script>
