--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -95,15 +95,14 @@
                 </div>
             </div>
         </div>
-
-        <div class="wrapper" id="mail">
-            <div id="wrap">
-                <div id='form_wrap'>
-                    <form>
-                        <p>Dear 姐姐,</p>
-                        <p id="demo" data-text="最美的花送给最漂亮的姐姐。"></p>
-                        <p style="text-align: right;">情商有点低的哥哥</p>
-                    </form>
+        <div class="wrapper" id="content">
+            <div class="mail">
+                <div class="envelope">
+                    <div class="paper">
+                        <p id="m_title" data-text="Dear 姐姐,"></p>
+                        <p id="m_content" data-text="最美的花送给最漂亮的姐姐。"></p>
+                        <p id="m_sig" class="sig" data-text="Yours, <br/>情商有点低的哥哥"></p>
+                    </div>
                 </div>
             </div>
         </div>
