add new animation

--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -99,30 +99,12 @@
             <div class="mail">
                 <div class="envelope">
                     <div class="paper">
-                        <p id="m_title" data-text="Dear 姐姐,"></p>
-                        <p id="m_content" data-text="最美的花送给最漂亮的姐姐。"></p>
-                        <p id="m_sig" class="sig" data-text="Yours, <br/>情商有点低的哥哥"></p>
+                        <p id="words" data-text="文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字"></p>
+                        <div style="width:44px;height:44px;background:url(img/carrot.png);margin: 5px auto;"></div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!--
-        <div style="width: 300px;height:200px;left:100px;top: 300px;position:absolute;">
-            <div class='rabbit'></div>
-            <div class='clouds'></div>
-        </div>
-
-        <div id="wrap">
-            <div id='form_wrap'>
-                <form>
-                    <p>Dear 姐姐,</p>
-                    <p id="demo" data-text="最美的花送给最漂亮的姐姐。"></p>
-                    <p style="text-align: right;">情商有点低的哥哥</p>
-                </form>
-            </div>
-        </div>
-        -->
         <script src="js/vendor/jquery-1.11.0.min.js"></script>
         <script src="js/vendor/jquery.mobile-1.4.1.min.js"></script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
