add new background

--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -100,7 +100,7 @@
                 <div class="envelope">
                     <div class="paper">
                         <p id="words" data-text="文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字"></p>
-                        <div style="width:44px;height:44px;background:url(img/carrot.png);margin: 5px auto;"></div>
+                        <div style="width:44px;height:44px;background:url(img/carrot.png) no-repeat;background-size:44px auto;margin: 5px auto;"></div>
                     </div>
                 </div>
             </div>
