--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -15,6 +15,9 @@
     </head>
     <body>
         <div class="wrapper" id="cover">
+            <div class="pull">
+                
+            </div>
             <div class="love">
                 <div class="left">
                     <div class="lr_f">
