finish the demo

--- a/shugetsu/index.html
+++ b/shugetsu/index.html
@@ -15,8 +15,7 @@
     </head>
     <body>
         <div class="wrapper" id="cover">
-            <div class="pull">
-
+            <div class="start" style="">
             </div>
             <div class="love">
                 <div class="left">
@@ -68,7 +67,7 @@
                         <div></div>
                         <div></div>
                     </div>
-                    <div style=''>
+                    <div>
                         <div></div>
                         <div></div>
                         <div></div>
@@ -105,7 +104,7 @@
             <div class="mail">
                 <div class="envelope">
                     <div class="paper">
-                        <p id="words" data-text="文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字"></p>
+                        <p id="words" data-text="To 姐姐， 情人节快乐，没有如姐姐所愿买到黑色的玫瑰，还是祝愿姐姐每一天都幸福快乐。哥哥连夜人肉赶制了一张电子贺卡送给你，耗时有点久，动画也是东拼西凑把能想到的都整一块儿了，今天也正逢元宵哥哥在卡片上也做了个姐姐最喜欢的兔纸，姐姐发现这坑爹的地方了吗，希望姐姐能喜欢。今后的日子哥哥会努力工作赚钱争取早日转正，也请姐姐努力happy的同时也小心自己的身体。 -- 情商有点低喜欢着你的哥哥"></p>
                         <div class="carrot"></div>
                     </div>
                 </div>
