--- a/event/20150115/index.html
+++ b/event/20150115/index.html
@@ -143,7 +143,7 @@
         </div>
     </div>
     <script src="js/lib/jquery-1.11.1.min.js"></script>
-    <script src="js/lib/hammers.min.js"></script>
+    <script src="js/lib/hammer.min.js"></script>
     <script src="js/milk.js"></script>
     <script src="js/main.js"></script>
 </body>
